# robust-ocm

./: .gitignore  .gitmodules  README.md  blacklist.txt  blacklist_final.txt  blacklist_ocr.txt  blacklist_short.txt  pyproject.toml  test.py  test_blacklist.txt
.github/instructions/: default.instructions.md
config/: config_en.json  config_general.json  config_ocr.json  config_zh.json
config/ocr/: deepseek-ocr.json  gemma3-27b.json  gemma3.json  glm.json  glyph.json  internvl-3.5.json  paddleocr-vl.json  qwen2.json  qwen3-vl.json
config/vqa/: deepseek-ocr.json  gemma3-27b.json  gemma3.json  glm.json  glyph.json  internvl-3.5.json  kimi-vl.json  qianfanvl.json  qwen2.json  qwen3-vl-2b.json  qwen3-vl.json
repo/paddle/: install.sh  ocr_cli.py
scripts/: README.md  create_dummy_predictions.py  download_longbenchv2_raw.sh  ds_batch_inference.py  eval_ocr.sh  extract_blacklist.py  generate_final_blacklist.py  upscale_images.py  validate_niah.py  verify_niah_context.py  word2png_function.py
scripts/ocr/: Qwen3-VL-8B_img2md.py  ds_ocr_inference.py  internvl_3.5_241.py  kimi_vl_inference.py  mineru_inference.py  multi_model_ocr_inference.py  qwen3_vl_inference.py  run_ds_ocr_benchmark.sh  run_internvl_benchmark.sh  run_kimivl_benchmark.sh  run_qwenvl_benchmark.sh
scripts/vqa/: README.md  mc_inference.py  niah_inference.py
src/robust_ocm/: __init__.py
src/robust_ocm/adv/: README.md  __init__.py  adv_cli.py  adv_render.py  cli.py  image_perturbations.py  niah_cli.py  perturbations.py  text_perturbations.py
src/robust_ocm/eval/: README.md  __init__.py  __main__.py  cli.py  metrics.py  preprocessing.py
src/robust_ocm/render/: README.md  __init__.py  analyze.py  bbox_extractor.py  cli.py  config.py  convert_to_omnidoc.py  image_processor.py  markdown_parser.py  pdf_generator.py  render.py  visualize.py
